--- a/src/main/webapp/css/admin/adminpage.css
+++ b/src/main/webapp/css/admin/adminpage.css
@@ -1,129 +1,15 @@
 @charset "UTF-8";
-* {
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-    text-decoration: none;
-}
-/* 내 게시글 조회 컨텐트 영역*/
-.adminPage_content {
-	width: 1000px;
-    margin: 0 auto;
-}
-.adminPage_content h2 {
-	font-weight: bold;
-}
-.adminPage_content a {
-	text-decoration: none;
-}
-/* 내 게시글 조회 헤더 영역 */
-.adminPage_content_header {
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-}
-.adminPage_content_header ul {
-    display: flex;
-    margin-top: 20px;
-    margin-left: 20px;
-}
-.adminPage_content_header a {
-    color: rgb(130, 130, 130);
-    margin: 0 20px;
-    font-weight: bold;
+.nav{
+	justify-content: space-around;
+} 
+
+.searchcon{
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction : column;
 }
 
-
-/* 내 게시글 조회 1:1문의 리스트 영역 */
-.adminPage_list {
-    width: 1000px;
-    border-collapse: collapse;
-}
-.adminPage_list thead {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-}
-.adminPage_list th {
-    /* background-color: red; */
-    padding: 10px 0;
-    text-align: center;
-}
-.adminPage_list td {
-    /* background-color: blue; */
-    padding: 5px 0;
-}
-.adminPage_list tr {
-	border-bottom: 1px solid gray;
-}
-
-/* 체크박스 영역 */
-.adminPage_list td:first-child {
+ #searchType{ 
 	text-align: center;
-}
-.adminPage_list input[type=checkbox] {
-	width: 15px;
-	height: 15px;
-	accent-color: black;	
-}
-
-/* 유형 영역 */
-.adminPage_list th:nth-child(2), td:nth-child(2) {
-    width: 130px;
-    font-size: 15px;
-    text-align: center;
-}
-.adminPage_list td:nth-child(2) {
-    font-size: 12px;
-}
-
-/* 제목 영역 */
-.adminPage_list th:nth-child(3) {
-    width: 500px;
-    text-align: center;
-}
-.adminPage_list td:nth-child(3) {
-    text-indent: 20px;
-}
-.adminPage_list td:nth-child(3) a {
-    color: black;
-}
-
-/* 작성일 영역 */
-.adminPage_list th:nth-child(4), td:nth-child(4) {
-    width: 170px;
-    text-align: center;
-}
-
-/* 처리상태, 조회수 */
-.adminPage_list td:nth-child(5) {
-    text-align: center;
-}
-.adminPage_list td:last-child {
-    text-align: center;
-}
-
-/* 내 게시글 조회 버튼 영역*/
-.adminPage_content #adminPage_btn_area {
-	position: relative;
-	width: 100%;
-	height: 20px;
-	/* background-color: red; */
-	margin-top: 10px;
-}
-.adminPage_content #btn_del {
-	padding: 5px 10px;
-	border: none;
-	border-radius: 5px;
-	background-color: black;
-	color: white;
-	font-size: 13px;
-	font-weight: bold;
-	cursor: pointer;
-}
-
-/* 내 게시글 조회 페이지바 영역*/
-.adminPage_content>.pagebar {
-	position: relative;
-	margin: 20px auto;
-	text-align: center;
+	align-content : center;
 }
