--- a/src/main/webapp/css/share/shareList.css
+++ b/src/main/webapp/css/share/shareList.css
@@ -31,13 +31,23 @@
 
 #main {
     width: 100%;
-    height: 100vh;
+    height: auto;
 
 } 
 
+.align{
+	width : 150px;
+	float : left;
+}
+
+.search{
+	width : 250px;
+	float : right;
+}
+
 div#list{
-   
-    height: 700px;
+  
+    height: auto;
 }
 #write{
     width: 60px;
