--- a/src/main/webapp/css/user/mypage/userEditPwd.css
+++ b/src/main/webapp/css/user/mypage/userEditPwd.css
@@ -125,7 +125,7 @@
       	box-shadow:30px;
         font-size: 15px;
         font-weight: bold;
-        color: rgb(0, 0, 0);
+        /* color: rgb(0, 0, 0); */
         background-color: rgb(125, 125, 125);
         border: none;
         border-radius: 5px;
