--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -9,18 +9,24 @@
 }
 
 .indexText{
+	
 	color : #e5e5e5;
+	text-shadow: 1px 0 1px black;
+	font-style: inherit;
+
+}
+
+.textm {
+ 	color : #5793c9 !important;
+}
+
+.lead {
+	font-style: inherit;
+	margin-top: 17px;
+	font-size: 10px;
 }
 
 
-/* header */
-header {
-    background-color: #e5e5e5;
-    display: flex;
-    flex-wrap: nowrap;
-    z-index: 999;
-    position: relative;
-}
 header nav {
     width: 100%;
     height: 130px;
@@ -34,9 +40,6 @@ header a {
     font-weight: 600;
     text-decoration: none;
     margin : 0;
-}
-.btn-group-sm>.btn {
- 	padding : 0 !important;
 }
 
 
