--- a/src/main/webapp/css/user/mypage/myPageHeader.css
+++ b/src/main/webapp/css/user/mypage/myPageHeader.css
@@ -12,7 +12,7 @@
 }
 .myPageHeader h1 {
     width: 100%;
-    background-color: lightgrey;
+    background-color: rgb(235, 235, 235);
     padding: 10px 0;
     display: inline-block;
     text-align: center;
